crates/config/tests/snapshots/eof_multiple_entries.snap
---
source: crates/config/tests/snapshots.rs
---
# eof-multiple-entries

## Input

```mical
a 1
b 2
```

## JSON

```json
{
  "a": 1,
  "b": 2
}
```

vim:ft=markdown
