crates/config/tests/snapshots/error_block_string_insufficient_indent.snap
---
source: crates/config/tests/snapshots.rs
---
# error-block-string-insufficient-indent

## Input

```mical
key |
   
  a

```

## Parser Error

```
10..12: block string line has insufficient indentation

```

## JSON

```json
{
  "key": ""
}
```

vim:ft=markdown
