crates/config/tests/snapshots/error_key_missing_value.snap
---
source: crates/config/tests/snapshots.rs
---
# error-key-missing-value

## Input

```mical
lonely
next 1

```

## Parser Error

```
6..6: missing value for the key

```

## JSON

```json
{
  "next": 1
}
```

vim:ft=markdown
