crates/config/tests/snapshots/error_key_tab_separator.snap
---
source: crates/config/tests/snapshots.rs
---
# error-key-tab-separator

## Input

```mical
key	value

```

## Parser Error

```
3..4: tab separating is not allowed

```

## JSON

```json
{
  "key": "value"
}
```

vim:ft=markdown
